src/test/ui/nll/match-guards-always-borrow.stderr
error[E0507]: cannot move out of `foo` in pattern guard
  --> $DIR/match-guards-always-borrow.rs:10:14
   |
LL |             (|| { let bar = foo; bar.take() })();
   |              ^^             ---
   |              |              |
   |              |              move occurs because `foo` has type `&mut std::option::Option<&i32>`, which does not implement the `Copy` trait
   |              |              move occurs due to use in closure
   |              move out of `foo` occurs here
   |
   = note: variables bound in patterns cannot be moved from until after the end of the pattern guard

error: aborting due to previous error

For more information about this error, try `rustc --explain E0507`.
